Updating index file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,36 @@
 <!DOCTYPE html>
-<html>
-    <head><title>  Test Page </title></head>
-    <body><h1>Test Page</h1></body>
- 
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WDD 230: Assignment</title>
+    <meta name="description" content="WDD 230: Assignment Portal page that we will use to be a hub for assignments in the future">
+    <link href="css/main.css" content="Style Sheet"
+</head>    
+<body>
+    <header>
+        <h1></h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="./">Home</a></li>
+            <li><a href="./">Assignment 1</a></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </nav>
+    <main>
+        <section>
+            <h2>Title</h2>
+            <p>
+                This is a paragraph
+            </p>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
+</body>
 </html>
