--- a/index.html
+++ b/index.html
@@ -10,15 +10,22 @@
 <body>
     <header>
         <h1></h1>
+        <img src="images/Pic_of_me.jpg" alt="Picture of me">
+        <h1>Devin Z. Patterson</h1>
+        <h1>WDD 230: Assignment Portal</h1>
     </header>
     <nav>
         <ul>
-            <li><a href="./">Home</a></li>
-            <li><a href="./">Assignment 1</a></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><p>Lesson 02: </p><a href="./">Title</a></li>
+            <li><p>Lesson 03: </p><a href="./">Title</a></li>
+            <li><p>Lesson 04: </p><a href="./">Title</a></li>
+            <li><p>Lesson 05: </p><a href="./">Title</a></li>
+            <li><p>Lesson 06: </p><a href="./">Title</a></li>
+            <li><p>Lesson 07: </p><a href="./">Title</a></li>
+            <li><p>Lesson 08: </p><a href="./">Title</a></li>
+            <li><p>Lesson 09: </p><a href="./">Title</a></li>
+            <li><p>Lesson 10: </p><a href="./">Title</a></li>
+            <li><p>Lesson 11: </p><a href="./">Title</a></li>
         </ul>
     </nav>
     <main>
