--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 230: Assignment</title>
     <meta name="description" content="WDD 230: Assignment Portal page that we will use to be a hub for assignments in the future">
-    <link href="css/main.css" content="Style Sheet"
+    <link href="css/main.css" content="Style Sheet">
 </head>    
 <body>
     <header>
         <h1></h1>
         <img src="images/Pic_of_me.jpg" alt="Picture of me">
-        <h1>Devin Z. Patterson</h1>
-        <h1>WDD 230: Assignment Portal</h1>
+        <h1 class="Name">Devin Z. Patterson</h1>
+        <h1 class="Title">WDD 230: Assignment Portal</h1>
     </header>
     <nav>
         <ul>
