--- a/index.html
+++ b/index.html
@@ -5,39 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 230: Assignment</title>
     <meta name="description" content="WDD 230: Assignment Portal page that we will use to be a hub for assignments in the future">
-    <link href="css/main.css" content="Style Sheet">
+    <link href="css/main.css" rel="stylesheet">
 </head>    
 <body>
     <header>
         <h1></h1>
         <img src="images/Pic_of_me.jpg" alt="Picture of me">
         <h1 class="Name">Devin Z. Patterson</h1>
-        <h1 class="Title">WDD 230: Assignment Portal</h1>
+        
     </header>
+    <h2>WDD 230: Assignment Portal</h2>
     <nav>
         <ul>
-            <li><p>Lesson 02: </p><a href="./">Title</a></li>
-            <li><p>Lesson 03: </p><a href="./">Title</a></li>
-            <li><p>Lesson 04: </p><a href="./">Title</a></li>
-            <li><p>Lesson 05: </p><a href="./">Title</a></li>
-            <li><p>Lesson 06: </p><a href="./">Title</a></li>
-            <li><p>Lesson 07: </p><a href="./">Title</a></li>
-            <li><p>Lesson 08: </p><a href="./">Title</a></li>
-            <li><p>Lesson 09: </p><a href="./">Title</a></li>
-            <li><p>Lesson 10: </p><a href="./">Title</a></li>
-            <li><p>Lesson 11: </p><a href="./">Title</a></li>
+            <li><p>Lesson 02: <a href="./">Title</a></p></li>
+            <li><p>Lesson 03: <a href="./">Title</a></p></li>
+            <li><p>Lesson 04: <a href="./">Title</a></p></li>
+            <li><p>Lesson 05: <a href="./">Title</a></p></li>
+            <li><p>Lesson 06: <a href="./">Title</a></p></li>
+            <li><p>Lesson 07: <a href="./">Title</a></p></li>
+            <li><p>Lesson 08: <a href="./">Title</a></p></li>
+            <li><p>Lesson 09: <a href="./">Title</a></p></li>
+            <li><p>Lesson 10: <a href="./">Title</a></p></li>
+            <li><p>Lesson 11: <a href="./">Title</a></p></li>
         </ul>
     </nav>
     <main>
-        <section>
-            <h2>Title</h2>
-            <p>
-                This is a paragraph
-            </p>
-        </section>
+        
     </main>
     <footer>
-
+        <div>&copy; 2022 | Devin Z. Patterson | Utah</div>
+        <div>Last Updated: 4/23/2022 11:27:56</div>
     </footer>
 </body>
 </html>
