--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -5,32 +5,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>W02 Assignement: Design Principles</title>
     <meta name="description" content="Week 2 assignment describing good design principles.">
+    <link rel="stylesheet" href="css/normalize.css">
     <link href="css/main.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,300;1,800&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>Design Principles Document</h1>
+        <h1>DESIGN PRINCIPLES DOCUMENT</h1>
         <h2>Devin Z. Patterson</h2>
     </header>
-
-    <nav>
-        <li><p>Visual Heirarchy <a href="./">Link 1</a></p></li>
-        <li><p>Rule of Thirds <a href="./">Link 2</a></p></li>
-        <li><p>White Space and Clean Design <a href="./">Link 3</a></p></li>
-        
-    </nav>
-
     <main>
         <section>
-            <h2>Visual Heirarchy</h2>
+            <h3>VISUAL HEIRARCHY</h3>
+            <p class="column_title">
+                Code
+            </p>
+            <p class="hlink">
+                Follow the link to check it out yourself! >>> <a href="https://code.org/">Code.org</a>
+            </p>
+            <img src="images\image2.png" alt="Image of Code.org">
+            <p>
+                Code.org easily shows <i>Visual Heirarchy</i> with the choice of
+                varying font sizes they use for their content. This section on 
+                the site specifically shows what they deem to be important information
+                for the viewer to see. They want to emphisize why they are a great place
+                for people to learn how to code, and draw the viewers attention to the 
+                staggering numbers they present by making that the first thing they see
+                when they get to this part on the site.  
+            </p>
         </section>
 
         <section>
-            <h2>Rule of Thirds</h2>
+            <h3>REPETITION</h3>
+            <p class="column_title">
+                343 Industries
+            </p>
+            <p class="hlink">
+                Follow the link to check it out yourself! >>> <a href="https://www.343industries.com/">343industries.com</a>
+            </p>
+            <img src="images\image1.png" alt="Image of 343industries.com">
+            <p>
+                343 did a great job with showing the example of <i>Repetition</i>. They 
+                chose to put up a familiar feel as you go through the whole site to make
+                it easy to navigate and look at. As you can see from the screen shot, the 
+                entire home page is basically put in this "square filled with info by square"
+                format as they go through and list information about their company.
+            </p>
         </section>
 
         <section>
-            <h2>White Space and Clean Design</h2>
+            <h3>WHITE SPACE & CLEAN DESIGN</h3>
+            <p class="column_title">
+                Nike
+            </p>
+            <p class="hlink">
+                Follow the link to check it out yourself! >>> <a href="https://www.nike.com/men">Nike.com</a>
+            </p>
+            <img src="images\image0.png" alt="Image of Nike.com">
+            <p>
+                Nike is literally built upon the design principle of <i>White Space and Clean Design</i>.
+                Their whole branding is about making clean and pleasing to the eye content, and as 
+                you can see from the screenshot, they use their whitespace to make the webpage feel
+                almost as one flowing image that you are looking at. When I look at this website the first
+                thing that comes to mind is balance. Everything feels really simple, elegent, and makes the 
+                viewer feel like they are looking at a polished site.
+            </p>
         </section>
 
     </main>
