--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <li><p>Lesson 11: <a href="">Title</a></p></li>
         </ul>
     </nav>
-    <p class="dis">Some lessons my need more than one activity/assignment link.</p>
+    <p class="disclaimer">Some lessons my need more than one activity/assignment link.</p>
     
     </main>
 
