Re-adding media queries to home page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>WDD 230: Assignment</title>
     <meta name="description" content="WDD 230: Assignment Portal page that we will use to be a hub for assignments in the future">
     <link href="css/main.css" rel="stylesheet">
+    <link href="css/medium.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,7 +29,7 @@
 
     <nav>
         <ul>
-            <li><p>Lesson 02: <a href="">Title</a></p></li>
+            <li><p>Lesson 02: <a href="C:\Users\dzpat\Desktop\Devin's Folder\Devin's School Stuff\WDD230\wdd230\lesson2\design-principles.html">Title</a></p></li>
             <li><p>Lesson 03: <a href="">Title</a></p></li>
             <li><p>Lesson 04: <a href="">Title</a></p></li>
             <li><p>Lesson 05: <a href="">Title</a></p></li>
