--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -6,7 +6,9 @@
     <title>W02 Assignement: Design Principles</title>
     <meta name="description" content="Week 2 assignment describing good design principles.">
     <link rel="stylesheet" href="css/normalize.css">
-    <link href="css/main.css" rel="stylesheet">
+    <link href="css/small.css" rel="stylesheet">
+    <link href="css/medium.css" rel="stylesheet">
+    <link href="css/large.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
