--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <nav>
         <ul>
-            <li><p>Lesson 02: <a href="C:\Users\dzpat\Desktop\Devin's Folder\Devin's School Stuff\WDD230\wdd230\lesson2\design-principles.html">Title</a></p></li>
+            <li><p>Lesson 02: <a href="lesson2/design-principles.html">Title</a></p></li>
             <li><p>Lesson 03: <a href="">Title</a></p></li>
             <li><p>Lesson 04: <a href="">Title</a></p></li>
             <li><p>Lesson 05: <a href="">Title</a></p></li>
