Fixed some HTML errors with my images path

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -33,7 +33,7 @@
             <p class="hlink">
                 Follow the link to check it out yourself! >>> <a href="https://code.org/">Code.org</a>
             </p>
-            <img src="images\image2.png" alt="Image of Code.org">
+            <img src="images/image2.png" alt="Image of Code.org">
             <p>
                 Code.org easily shows <i>Visual Heirarchy</i> with the choice of
                 varying font sizes they use for their content. This section on 
@@ -53,7 +53,7 @@
             <p class="hlink">
                 Follow the link to check it out yourself! >>> <a href="https://www.343industries.com/">343industries.com</a>
             </p>
-            <img src="images\image1.png" alt="Image of 343industries.com">
+            <img src="images/image1.png" alt="Image of 343industries.com">
             <p>
                 343 did a great job with showing the example of <i>Repetition</i>. They 
                 chose to put up a familiar feel as you go through the whole site to make
@@ -71,7 +71,7 @@
             <p class="hlink">
                 Follow the link to check it out yourself! >>> <a href="https://www.nike.com/men">Nike.com</a>
             </p>
-            <img src="images\image0.png" alt="Image of Nike.com">
+            <img src="images/image0.png" alt="Image of Nike.com">
             <p>
                 Nike is literally built upon the design principle of <i>White Space and Clean Design</i>.
                 Their whole branding is about making clean and pleasing to the eye content, and as 
