--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -1,4 +1,74 @@
-Chamber of Commerce websites serve more than just one purpose.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WDD 230: Lesson 3</title>
+    <meta name="description" content="WDD 230: Lesson 3 Assignment which has us make a site plan for a chamber of commerce website.">
+    <link href="css/main.css" rel="stylesheet">
+    <link href="css/medium.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,300;1,800&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <header>
+        <img src="" alt="Website logo">
+        <h1>West Side Chamber</h1>
+        <nav>
+            <ul>
+                <li><a href="lesson3/index.html">Home</a></li>
+                <li><a href="lesson3/target-audience/target-audience.html">Target Audience</a></li>
+                <li><a href="lesson3/color-scheme/color-scheme.html">Color-Scheme</a></li>
+                <li><a href="lesson3/typography/typography.html">Typography</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h2>Site Purpose</h2>
+        <p>This sites purpose is going to be to highlight and publish about West Valley City, Utah
+            to help promote the people, businesses, and attractions that make the city so unique!
+        </p>
+        <p>Another big purpose of our site is to not only inform people of our community, but to bring the community together with 
+            our city forumn as a page to post different issues or improvements that we can lobby for in our communities!
+        </p>
+        
+        <h2>Domain Name</h2>
+        <p>The domain name for this webiste would be <i>www.westsidecommerce.org</i>!</p>
+    </main>
+
+    <footer>
+        <div>&copy; 2022 | Devin Z. Patterson | Utah</div>
+        <div class="update">Last Updated: <span id="currentdate"></span></div>
+    </footer>
+    <script src="js/date.js"></script>
+</body>
+</html>
+
+<!--Chamber of Commerce websites serve more than just one purpose.
  On one hand, they work to promote tourism and local businesses
   and organizations. On the other, they serve current members 
   and garner funds in order to continue serving the public.
+
+
+Ideas - West Side Chamber of Commerce
+
+Local attractions(Rec Center/Skatepark, School District, Attractions/Location, Businesses),
+ things going on in the city(West Fest), Local stories??? Bee keepers/
+
+ good example website to find great examples https://www.experiencebeecounty.org/ 
+
+ Blue and gold for west valley colors
+
+ www.westsidecommerce.org
+
+ font choice - Always have like Barlow because of the clean, modern look and it's easy on the eyes.
+-->
