Major update for Chamber of Commerce page

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="WDD 230: Lesson 3 Assignment which has us make a site plan for a chamber of commerce website.">
     <link href="css/main.css" rel="stylesheet">
     <link href="css/medium.css" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,22 +21,31 @@
 
 <body>
     <header>
-        <img src="" alt="Website logo">
-        <h1>West Side Chamber</h1>
+        <div class="logo"><img  src="" alt="Website logo"></div>
+        <div class="title"><h1 >West Side Chamber of Commerce</h1></div>
         <nav>
-            <ul>
-                <li><a href="lesson3/index.html">Home</a></li>
-                <li><a href="lesson3/target-audience/target-audience.html">Target Audience</a></li>
-                <li><a href="lesson3/color-scheme/color-scheme.html">Color-Scheme</a></li>
-                <li><a href="lesson3/typography/typography.html">Typography</a></li>
-            </ul>
+        <ul>
+            <li><a href="">Discover</a></li>
+            <li><a href="">Directory</a></li>
+            <li><a href="">Join</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>
         </nav>
     </header>
+
+
     <main>
-        <h2>Target Audience</h2>
-        
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+
     </main>
-    
+
     <footer>
         <div>&copy; 2022 | Devin Z. Patterson | Utah</div>
         <div class="update">Last Updated: <span id="currentdate"></span></div>
