--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -7,6 +7,7 @@
     <meta name="description" content="WDD 230: Lesson 3 Assignment which has us make a site plan for a chamber of commerce website.">
     <link href="css/main.css" rel="stylesheet">
     <link href="css/medium.css" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,38 +21,35 @@
 
 <body>
     <header>
-        <img src="" alt="Website logo">
-        <h1>West Side Chamber</h1>
-        <nav>
-            <ul>
-                <li><a href="lesson3/index.html">Home</a></li>
-                <li><a href="lesson3/target-audience/target-audience.html">Target Audience</a></li>
-                <li><a href="lesson3/color-scheme/color-scheme.html">Color-Scheme</a></li>
-                <li><a href="lesson3/typography/typography.html">Typography</a></li>
-            </ul>
-        </nav>
+        <div class="logo"><img  src="images/blue_white_logo.png" alt="Website logo"></div>
+        <div class="title"><h1>WEST SIDE CHAMBER OF COMMERCE</h1></div>
     </header>
 
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="target-audience.html">Target Audience</a></li>
+            <li><a href="color-scheme.html">Color-Scheme</a></li>
+            <li><a href="typography.html">Typography</a></li>
+        </ul>
+    </nav>
+
     <main>
+        <div class="info">
         <h2>Color Scheme</h2>
         <p>Describes the main colors of the various elements on westsidecommerce.org.</p>
         <p>
             <br>
-            <strong>Primary Colors: </strong>
+            <strong>Primary Colors: </strong> #af4e4e, #429aff, #eeeeee, #00000033
             <br>
-            <strong>Headers: </strong>
+            <strong>Header: </strong>#af4e4e
             <br>
-            <strong>Paragraphs: </strong>
+            <strong>Footer: </strong>#429aff
             <br>
-            <strong>Footer: </strong>
+            <strong>Hover Color: </strong>#0000004d
             <br>
-            <strong>Unvisited Links: </strong>
-            <br>
-            <strong>Visited Links: </strong>
-            <br>
-            <strong>Hover Color: </strong>
         </p>
-
+        </div>
     </main>
 
     <footer>
