--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -6,7 +6,7 @@
     <title>WDD 230: Lesson 3</title>
     <meta name="description" content="WDD 230: Lesson 3 Assignment which has us make a site plan for a chamber of commerce website.">
     <link href="css/main.css" rel="stylesheet">
-    <link href="css/medium.css" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,19 +20,20 @@
 
 <body>
     <header>
-        <img src="" alt="Website logo">
-        <h1>West Side Chamber</h1>
-        <nav>
-            <ul>
-                <li><a href="lesson3/index.html">Home</a></li>
-                <li><a href="lesson3/target-audience/target-audience.html">Target Audience</a></li>
-                <li><a href="lesson3/color-scheme/color-scheme.html">Color-Scheme</a></li>
-                <li><a href="lesson3/typography/typography.html">Typography</a></li>
-            </ul>
-        </nav>
+        <div class="logo"><img  src="images/blue_white_logo.png" alt="Website logo"></div>
+        <div class="title"><h1>WEST SIDE CHAMBER OF COMMERCE</h1></div>
     </header>
 
     <main>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="target-audience.html">Target Audience</a></li>
+                <li><a href="color-scheme.html">Color-Scheme</a></li>
+                <li><a href="typography.html">Typography</a></li>
+            </ul>
+        </nav>
+        <div class="info">
         <h2>Site Purpose</h2>
         <p>This sites purpose is going to be to highlight and publish about West Valley City, Utah
             to help promote the people, businesses, and attractions that make the city so unique!
@@ -43,6 +44,7 @@
         
         <h2>Domain Name</h2>
         <p>The domain name for this webiste would be <i>www.westsidecommerce.org</i>!</p>
+        </div>
     </main>
 
     <footer>
