--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <nav>
         <ul>
-            <li><p>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></p></li>
+            <li><p>Lesson 02: <a href="lesson2\design-principles.html">Design Principles</a></p></li>
             <li><p>Lesson 03: <a href="lesson3/commerce.html">Website Planning Document</a></p></li>
             <li><p>Lesson 04: <a href="">Title</a></p></li>
             <li><p>Lesson 05: <a href="">Title</a></p></li>
