--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <ul>
             <li><p>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></p></li>
             <li><p>Lesson 03: <a href="lesson3/index.html">Website Planning Document</a></p></li>
-            <li><p>Lesson 04: <a href="">Title</a></p></li>
+            <li><p>Lesson 04: <a href="chamber/index.html">Chamber Home Page</a></p></li>
             <li><p>Lesson 05: <a href="">Title</a></p></li>
             <li><p>Lesson 06: <a href="">Title</a></p></li>
             <li><p>Lesson 07: <a href="">Title</a></p></li>
