update to fix html errors

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -23,7 +23,7 @@
 <body>
     <header>
 
-        <div ><img class="logo" src="images/blue_white_logo small.png" alt="Website logo"></div>
+        <div ><img class="logo" src="images/blue_white_logo_small.png" alt="Website logo"></div>
 
         <div class="title"><h1 >West Side <br> Chamber of Commerce</h1></div>
 
