update to main page for chamber of commerce

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -48,11 +48,38 @@
 
     <main>
         <div class="wrapper">
-        <div class="event">Event</div>
-        <div class="hero">Hero with site name and call to action</div>
-        <div class="weather">Weather</div>
-        <div class="join">Join</div>
+
+        <div class="event">
+            <section class="eventTitle">Event</section>
+            <picture>
+                <img class="westfestlogo" src="images/West_Fest_Logo.jpg" alt="westfestimg">
+            </picture>
+            <section class="eventDes">West Fest <br> Thurs. June 16th 5 PM - 11PM</section>
+        </div>
+
+        <div class="hero">
+            <picture>
+                <img src="images/westvalleypic_edited.jpg" alt="westValley">
+            </picture>
+            <section class="welcome">Welcome to the West Side!</section>
+            <section class="joinchamber">Join the Chamber</section>
+        </div>
+
+        <div class="weather">
+            <section class="weatherTitle">Weather</section>
+            <picture>
+                <img class= "wvcweather" src="images/weather.png" alt="weatherwvc">
+            </picture>
+            
+        </div>
+
+        <div class="join">
+            <section class="joinBttn">JOIN NOW</section>
+            <section class="joinDes">Learn how you can join this chamber and how it will help your organization!</section>
+        </div>
+
         <div class="news">News Release</div>
+
         <div class="spotlightbox">
             <div class="spotlight1">Spotlight 1</div>
             <div class="spotlight2">Spotlight 2</div>
