Update to chamber home page

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -78,12 +78,53 @@
             <section class="joinDes">Learn how you can join this chamber and how it will help your organization!</section>
         </div>
 
-        <div class="news">News Release</div>
+        <div class="news">
+            <section class="newsTitle1">News Release</section>
+            <section class="newsTitle2">--CHURCH AND CITY WORK TOGETHER FOR OUR NEIGHBORHOODS--</section>
+            <section class="newsDes">
+                The Church of Jesus Christ of Latter-day Saints and local West Valley City residents
+                band together in Operation: MyHometown to clean up neighborhoods and serve the community. Business owners have
+                donated to the cause to help clean up the areas around their places of business.
+                </section>
+        </div>
 
         <div class="spotlightbox">
-            <div class="spotlight1">Spotlight 1</div>
-            <div class="spotlight2">Spotlight 2</div>
-            <div class="spotlight3">Spotlight 3</div>
+            <div class="spotlight1">
+                <section class="spot1Des">
+                    Join us over at the Recreation Center!
+                </section>
+                <picture >
+                    <img class="recpic" src="images/rec_center_pic.png" alt="recCenter">
+                </picture>
+            </div>
+
+             <div class="spotlight2">
+                <section class="spot2Des">
+                    Night web developing classes!
+                </section>
+                <picture >
+                    <img class="webdev" src="images/computer_icon.png" alt="computericon">
+                </picture>
+                <section class="contactinfo">
+                    webdev@nightclass.com<br>
+                    (999)-999-9999
+                </section>
+                
+            </div>
+
+            <div class="spotlight3">
+                <section class="spot3Des">
+                    Come use your hands to build something!
+                </section>
+                <picture >
+                    <img class="woodshop" src="images/woodshop.png" alt="woodshopicon">
+                </picture>
+                <section class="contactinfo">
+                    chopwood@woodshop.com<br>
+                    (999)-999-9999
+                </section>
+                
+            </div>
         </div>
         </div>
     </main>
