Small update to the footer and some of the css

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -137,7 +137,7 @@
         <div class="footerHeading">
         <div class="logo_footer"><img  src="images/blue_white_logo_small.png" alt="Website logo"></div>
         <div class="f_heading1"><h2 class="footertitle">West Side <br>Chamber of Commerce</h2><br>3600 S Constitution Boulevard <br> West Valley City, UT 84119</div>
-        <div>info@westside.org<br>+(801) 644-01111<br><a href="https://www.google.com/maps/place/West+Valley+City,+UT/@40.682492,-112.0104281,13z/data=!4m5!3m4!1s0x87528cddfa3588b3:0xf57b74998d78ace5!8m2!3d40.6916132!4d-112.0010501">Location Map</a></div>
+        <div class="footerDes">info@westside.org<br>+(801) 644-01111<br><a href="https://www.google.com/maps/place/West+Valley+City,+UT/@40.682492,-112.0104281,13z/data=!4m5!3m4!1s0x87528cddfa3588b3:0xf57b74998d78ace5!8m2!3d40.6916132!4d-112.0010501">Location Map</a></div>
         </div>
 
 
