updated windchill js file

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -63,7 +63,7 @@
 
         <div class="hero">
             <picture>
-                <img src="images/westvalleypic_edited.jpg" alt="westValley">
+                <img class="heroimg" src="images/westvalleypic_edited.jpg" alt="westValley">
             </picture>
             <section class="welcome">Welcome to the West Side!</section>
             <section class="joinchamber">Join the Chamber</section>
@@ -71,9 +71,15 @@
 
         <div class="weather">
             <section class="weatherTitle">Weather</section>
+            <div>
             <picture>
                 <img class= "wvcweather" src="images/weather.png" alt="weatherwvc">
             </picture>
+            <div class="temp">33 F</div>
+            </div>
+            <div class="weathertype">Cloudy</div>
+            <div class="windspeed">Wind Speed: 2.5 km/h</div>
+            <div class="windchill">Wind Chill: N/A</div>
             
         </div>
 
@@ -145,5 +151,6 @@
     </footer>
     <script src="js/date.js"></script>
     <script src="js/banner.js"></script> 
+    <script src="js/windchill.js"></script>
 </body>
 </html>
