--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <li><p>Lesson 05: <a href="chamber/index.html">Chamber Home Page Stage 2</a></p></li>
             <li><p> Week 05: <a href="bom_practice/bom.html">BOM Practice page</a></p></li>
             <li><p>Lesson 06: <a href="chamber/index.html">Chamber Responsive Images</a></p></li>
-            <li><p>Lesson 07: <a href="">Title</a></p></li>
-            <li><p>Lesson 08: <a href="">Title</a></p></li>
+            <li><p>Lesson 07: <a href="">N/A</a></p></li>
+            <li><p>Lesson 08: <a href="lesson8/tablebuild.html">Table Build</a></p></li>
             <li><p>Lesson 09: <a href="">Title</a></p></li>
             <li><p>Lesson 10: <a href="">Title</a></p></li>
             <li><p>Lesson 11: <a href="">Title</a></p></li>
