--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <link href="main.css" rel="stylesheet">
-    </head>
+<html lang="en">
     <table>
         <thead>
+            <link href="main.css" rel="stylesheet">
             <tr>
                 <th colspan="3" scope="colgroup">ACME Wildwest</th>
             </tr>
