--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+       <link href="main.css" rel="stylesheet"> 
+    </head>
+    
     <table>
         <thead>
-            <link href="main.css" rel="stylesheet">
+            
             <tr>
                 <th colspan="3" scope="colgroup">ACME Wildwest</th>
             </tr>
