--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -2,8 +2,9 @@
 <html lang="en">
     <head>
        <link href="main.css" rel="stylesheet"> 
+       <title>WDD 230: Table Assignment</title>
     </head>
-    
+
     <table>
         <thead>
             
