--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -12,12 +12,12 @@
             <h1> Progressive Loading(images)</h1>  
         </header>
         <main>
-        <img src="images/placeholder_300x400.png" data-src="images/water_300x400.jpg">
-        <img src="images/placeholder_300x400.png" data-src="images/phone_300x400.jpg">
-        <img src="images/placeholder_300x400.png" data-src="images/catsitting_300x400.jpg">
-        <img src="images/placeholder_300x400.png" data-src="images/manwalking_300x400.jpg">
-        <img src="images/placeholder_300x400.png" data-src="images/alley_300x400.jpg">
-        <img src="images/placeholder_300x400.png" data-src="images/leaf_300x400.jpg">
+        <img src="images/placeholder_300x400.png" data-src="images/water_300x400.jpg" alt="image1">
+        <img src="images/placeholder_300x400.png" data-src="images/phone_300x400.jpg" alt="image2">
+        <img src="images/placeholder_300x400.png" data-src="images/catsitting_300x400.jpg" alt="image3">
+        <img src="images/placeholder_300x400.png" data-src="images/manwalking_300x400.jpg" alt="image4">
+        <img src="images/placeholder_300x400.png" data-src="images/alley_300x400.jpg" alt="image5">
+        <img src="images/placeholder_300x400.png" data-src="images/leaf_300x400.jpg" alt="image6">
         </main>
     </body>
     <script src="lazyload.js"></script>
