Huge update to the discover homepage

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -45,8 +45,17 @@
     
     <div class="headerDate"></div>
 
-    <main>
-        
+    <main class="discoverMain">
+        <img  src="images/placeholder_700x400.png" data-src="images/RaceEthnicity_700x400" alt="chart1">
+        <div><p>Race/Ethnicity chart for West Valley City</p></div>
+        <img src="images/placeholder_500x400.png" data-src="images/Maverickcenter_500x400" alt="image1">
+        <div><p>West Valley City Maverick Center</p></div>
+        <img src="images/placeholder_500x400.png" data-src="images/Skatepark_500x400" alt="image2">
+        <div><p>West Valley City Skatepark</p></div>
+        <img src="images/placeholder_500x400.png" data-src="images/Valleyfair_500x400" alt="image3">
+        <div><p>West Valley City Valley Fair Mall</p></div>
+        <img src="images/placeholder_700x400.png" data-src="images/occupations_700x340" alt="chart2">
+        <div><p>Occupations/Businesses in West Valley City</p></div>
     </main>
 
     <footer>
@@ -60,7 +69,7 @@
         <div class="copyright">&copy;2022 West Side Chamber | Devin Z. Patterson | WDD 230 Project | Last Update: <span id="currentdate"></span></div>
     </footer>
     <script src="js/date.js"></script>
-    <script src="js/banner.js"></script> 
-    <script src="js/windchill.js"></script>
+    <script src="js/banner.js"></script>
+    <script src="js/lazyload.js"></script>
 </body>
 </html>
