--- a/chamber/index.html
+++ b/chamber/index.html
@@ -94,9 +94,9 @@
             <section class="newsTitle1">News Release</section>
             <section class="newsTitle2">--CHURCH AND CITY WORK TOGETHER FOR OUR NEIGHBORHOODS--</section>
             <section class="newsDes">
-                The Church of Jesus Christ of Latter-day Saints and local West Valley City residents
+                <!--The Church of Jesus Christ of Latter-day Saints and local West Valley City residents
                 band together in Operation: MyHometown to clean up neighborhoods and serve the community. Business owners have
-                donated to the cause to help clean up the areas around their places of business.
+                donated to the cause to help clean up the areas around their places of business.-->
                 </section>
         </div>
 
