--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -46,15 +46,15 @@
     <div class="headerDate"></div>
 
     <main class="discoverMain">
-        <img  src="images/placeholder_700x400.png" data-src="images/RaceEthnicity_700x400" alt="chart1">
+        <img  src="images/placeholder_700x400.png" data-src="images/RaceEthnicity_700x400.png" alt="chart1">
         <div><p>Race/Ethnicity chart for West Valley City</p></div>
-        <img src="images/placeholder_500x400.png" data-src="images/Maverickcenter_500x400" alt="image1">
+        <img src="images/placeholder_500x400.png" data-src="images/Maverickcenter_500x400.jpg" alt="image1">
         <div><p>West Valley City Maverick Center</p></div>
-        <img src="images/placeholder_500x400.png" data-src="images/Skatepark_500x400" alt="image2">
+        <img src="images/placeholder_500x400.png" data-src="images/Skatepark_500x400.jpg" alt="image2">
         <div><p>West Valley City Skatepark</p></div>
-        <img src="images/placeholder_500x400.png" data-src="images/Valleyfair_500x400" alt="image3">
+        <img src="images/placeholder_500x400.png" data-src="images/Valleyfair_500x400.jpg" alt="image3">
         <div><p>West Valley City Valley Fair Mall</p></div>
-        <img src="images/placeholder_700x400.png" data-src="images/occupations_700x340" alt="chart2">
+        <img src="images/placeholder_700x400.png" data-src="images/occupations_700x340.png" alt="chart2">
         <div><p>Occupations/Businesses in West Valley City</p></div>
     </main>
 
