Join page and thank you page

--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -40,38 +40,13 @@
     </header>
 
     <span id="greetbanner" role="banner"></span>
-    
     <div class="headerDate"></div>
 
-    <div class="timeVisited">
-    <p><span class="visits-label">Times you've vistited our Chamber:  </span></p><span class="visits"></span>
-    </div>
-
-    <main class="discoverMain">
-        <div>
-            <img class="pro-img" src="images/placeholder_700x400.png" data-src="images/RaceEthnicity_700x400.png" alt="chart1">
-            <p class="imageDesc">Race/Ethnicity chart for West Valley City</p>
+        <div class="thankYou">
+            <h2>--THANK YOU FOR YOUR APPLICATION--</h2>
+            <p>We appreciate your patronage and are looking forward to having you as a part of our Chamber!</p>
         </div>
 
-        <div>
-            <img class="pro-img" src="images/placeholder_500x400.png" data-src="images/Maverickcenter_500x400.jpg" alt="image1">
-            <p class="imageDesc">West Valley City Maverick Center</p>
-        </div>
-
-        <div>
-            <img class="pro-img" src="images/placeholder_500x400.png" data-src="images/Skatepark_500x400.jpg" alt="image2">
-            <p class="imageDesc">West Valley City Skatepark</p>
-        </div>
-
-        <div>
-            <img class="pro-img" src="images/placeholder_500x400.png" data-src="images/Valleyfair_500x400.jpg" alt="image3">
-            <p class="imageDesc">West Valley City Valley Fair Mall</p>
-        </div>
-
-        <div>
-            <img class="pro-img" src="images/placeholder_700x400.png" data-src="images/occupations_700x340.png" alt="chart2">
-            <p class="imageDesc">Occupations/Businesses in West Valley City</p>
-        </div>
     </main>
 
     <footer>
@@ -86,7 +61,6 @@
     </footer>
     <script src="js/date.js"></script>
     <script src="js/banner.js"></script>
-    <script src="js/lazyload.js"></script>
-    <script src="js/timevisited.js"></script>
+
 </body>
 </html>
