--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
             <li><p>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></p></li>
             <li><p>Lesson 03: <a href="lesson3/index.html">Website Planning Document</a></p></li>
             <li><p>Lesson 04: <a href="chamber/index.html">Chamber Home Page</a></p></li>
-            <li><p>Lesson 05: <a href="chamber/index.html">Chamber Home Page Stage 2</a></p></li>
-            <li><p> Week 05: <a href="bom_practice/bom.html">BOM Practice page</a></p></li>
+            <li><p>Lesson 05: <a href="chamber/index.html">Chamber Home Page Stage 2</a> / <a href="bom_practice/bom.html">BOM Practice page</a></p></li>
             <li><p>Lesson 06: <a href="chamber/index.html">Chamber Responsive Images</a></p></li>
-            <li><p>Lesson 07: <a href="lesson7/lazyload.html">Progressive loading images</a> / <a href="chamber/discover.html">Discover Page</a></p></li>
-            <li><p>Lesson 08: <a href="lesson8/tablebuild.html">Table Build</a></p></li>
+            <li><p>Lesson 07: <a href="lesson7/lazyload.html">Progressive loading images</a> / <a href="chamber/discover.html">Chamber Discovery Page</a></p></li>
+            <li><p>Lesson 08: <a href="lesson8/tablebuild.html">Table Build</a> / <a href="chamber/join.html">Chamber Join Page</a></p></li>
             <li><p>Lesson 09: <a href="">Title</a></p></li>
             <li><p>Lesson 10: <a href="">Title</a></p></li>
             <li><p>Lesson 11: <a href="">Title</a></p></li>
