update to join page

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 230: Lesson 3</title>
-    <meta name="description" content="WDD 230: Lesson 3 Assignment which has us make a site plan for a chamber of commerce website.">
+    <title>WDD 230: Discovery Page</title>
+    <meta name="description" content="WDD 230: Chamber of Commerce Assignment Discovery Page.">
     <link href="css/small.css" rel="stylesheet">
     <link href="css/medium.css" rel="stylesheet">
     <link href="css/large.css" rel="stylesheet">
