--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 230: Lesson 3</title>
-    <meta name="description" content="WDD 230: Lesson 3 Assignment which has us make a site plan for a chamber of commerce website.">
+    <title>WDD 230: Join Page</title>
+    <meta name="description" content="WDD 230: Chamber of Commerce Join page.">
     <link href="css/small.css" rel="stylesheet">
     <link href="css/medium.css" rel="stylesheet">
     <link href="css/large.css" rel="stylesheet">
@@ -42,10 +42,16 @@
     <span id="greetbanner" role="banner"></span>
     <div class="headerDate"></div>
 
-        <div class="thankYou">
-            <h2>--THANK YOU FOR YOUR APPLICATION--</h2>
-            <p>We appreciate your patronage and are looking forward to having you as a part of our Chamber!</p>
-        </div>
+    <main>
+
+        <div class="cards"></div>
+        <section>
+            <h1></h1>
+            <p></p>
+        </section>
+
+    </main>
+
 
     <footer>
         <div class="footerHeading">
@@ -59,6 +65,7 @@
     </footer>
     <script src="js/date.js"></script>
     <script src="js/banner.js"></script>
+    <script src="js/cards.js"></script>
 
 </body>
 </html>
