update to json and directory

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -188,6 +188,7 @@
     </footer>
     <script src="js/date.js"></script>
     <script src="js/banner.js"></script>
+    <script src="js/join.js"></script>
 
 </body>
 </html>
