--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -26,7 +26,7 @@
                 <li><a class="hamburger" href="#" onclick="">&#9776;</a></li>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="discover.html">DISCOVER</a></li>
-                <li><a href="#">DIRECTORY</a></li>
+                <li><a href="directory.html">DIRECTORY</a></li>
                 <li><a href="join.html">JOIN</a></li>
                 <li><a href="#">CONTACT</a></li>
             </ul>
