--- a/lesson9/prophets.html
+++ b/lesson9/prophets.html
@@ -27,7 +27,7 @@
                 <h2></h2>  
                 <p class = 'p1'></p>
                 <p class = 'p2'></p>
-                <img>
+                <img src="#" alt="Picture's of Prophets">
             </section>
         
       </main>
