--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -44,7 +44,12 @@
 
     <main>
 
-        <div class="cards"></div>
+        <div class="menu">
+            <button id="gridbttn">&#x25a6;</button>
+            <button id="listbttn">&#9776;</button>
+        </div>
+
+        <div class="grid"></div>
 
     </main>
 
