--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li><p>Lesson 07: <a href="lesson7/lazyload.html">Progressive loading images</a> / <a href="chamber/discover.html">Chamber Discovery Page</a></p></li>
             <li><p>Lesson 08: <a href="lesson8/tablebuild.html">Table Build</a> / <a href="chamber/join.html">Chamber Join Page</a></p></li>
             <li><p>Lesson 09: <a href="lesson9/prophets.html">Prophets JSON practice</a> / <a href="chamber/directory.html">Business Directory Page</a></p></li>
-            <li><p>Lesson 10: <a href="">Title</a></p></li>
+            <li><p>Lesson 10: <a href="lesson10/weather-api.html">Weather API practice</a></p></li>
             <li><p>Lesson 11: <a href="">Title</a></p></li>
         </ul>
     </nav>
