--- a/lesson10/weather-api.html
+++ b/lesson10/weather-api.html
@@ -5,12 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="WDD 230: Web API Assignment for week 10">
         <title>Web API practice - Week 10</title>
-        <script src="weatherapi.js"></script>
+        <script defer src="weatherapi.js"></script>
+        <link href="main.css" rel="stylesheet">
     </head>
 
     <body>
-
-        <main>
+        <div>
             <h1>OpenWeatherMap.org API Test</h1>
             <p>The current temperature in Fairbanks, Alaska is <span id="current-temp"></span> &deg;F</p>
             <h2>Current Condition Icon</h2>
@@ -18,9 +18,6 @@
                 <img src="" alt="" id="weather-icon" />
                 <figcaption></figcaption>
             </figure>
-        </main>
-
-
-
+        </div>    
     </body>
 </hmtl>
