update to weather

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -74,13 +74,13 @@
             <section class="weatherTitle">Weather</section>
             <div>
             <picture>
-                <img class= "wvcweather" src="images/weather.png" alt="weatherwvc">
+                <img class= "wvcweather" src="" alt="">
             </picture>
-            <div class="temp">40° F</div>
+            <div class="temp"></div>
             </div>
-            <div class="weathertype">Cloudy</div>
-            <div class="windspeed">Wind Speed: 5 m/h</div>
-            <div>Wind Chill:</div><div class="windchill"></div>
+            <div class="weathertype"></div>
+            <div class="windspeed"></div>
+            <div class="windchill"></div>
             
             
         </div>
@@ -153,6 +153,6 @@
     </footer>
     <script src="js/date.js"></script>
     <script src="js/banner.js"></script> 
-    <script src="js/windchill.js"></script>
+    <script src="js/weather.js"></script>
 </body>
 </html>
