--- a/lesson10/weather-api.html
+++ b/lesson10/weather-api.html
@@ -1,5 +1,5 @@
-<DOCTYPE html>
-<hmtl lang="en">
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,4 +20,4 @@
             </figure>
         </div>    
     </body>
-</hmtl>
+</html>
